[gd_scene load_steps=33 format=1]

[ext_resource path="res://scripts/Corredor3.gd" type="Script" id=1]
[ext_resource path="res://scenes/meshes/hakuTrue.scn" type="PackedScene" id=2]
[ext_resource path="res://scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://scenes/meshes/corredor3.scn" type="PackedScene" id=4]
[ext_resource path="res://scenes/meshes/MONSTER3.scn" type="PackedScene" id=5]
[ext_resource path="res://scenes/meshes/monster1.scn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/panel.png" type="Texture" id=8]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=9]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.fnt" type="BitmapFont" id=11]
[ext_resource path="res://addons/SMRT/dialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.TTF" type="DynamicFontData" id=13]
[ext_resource path="res://addons/SMRT/next_line.png" type="Texture" id=14]
[ext_resource path="res://addons/SMRT/faces/dialog.tres" type="SpriteFrames" id=15]
[ext_resource path="res://addons/SMRT/beep_letter.wav" type="Sample" id=16]
[ext_resource path="res://addons/SMRT/font/zig_____.ttf" type="DynamicFontData" id=17]

[sub_resource type="Environment" id=1]

ambient_light/enabled = true
ambient_light/color = Color( 0.196078, 0.184314, 0.12549, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.760538, 3.89798, 3.52526 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 8.88247, 3.73186, 2.14791 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 2.14631, 5.12818, 8.77096 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 1.77611, 3.37181, 1 )

[sub_resource type="BoxShape" id=6]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=8]

extents = Vector3( 1, 1, 1 )

[sub_resource type="DynamicFont" id=9]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 13 )

[sub_resource type="Animation" id=10]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=13]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="SampleLibrary" id=14]

samples/beep_letter = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}

[sub_resource type="DynamicFont" id=15]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 17 )

[node name="Corredor3" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="Haku" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.6711, -1.72326, 17.1266 )

[node name="Camera" type="Camera" parent="Haku"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.663414, -0.383022, 0.642788, 0.0252013, 0.870002, 0.492404, -0.747828, -0.310468, 0.586824, 46.3409, 40.6939, 41.2929 )
projection = 1
size = 45.0
near = 0.11
far = 200.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.687908, -0.327426, 0.647747, -0.143858, 0.813246, 0.563859, -0.711398, -0.481066, 0.512335, 13.9326, 54.7869, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="corredor3" parent="." instance=ExtResource( 4 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.69401, 0 )

[node name="Areas" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="AreaQuadro" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34.5599, 3.41325, 3.40604 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaQuadro"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34.5599, 3.41325, 3.40604 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="AreaPorta1" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.9583, -2.55301, 24.4197 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaPorta1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.9583, -2.55301, 24.4197 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AreaPorta2" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0432, -1.15184, 3.13215 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaPorta2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0432, -1.15184, 3.13215 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Monsters" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.7221, 0, -4.01684 )

[node name="monster1" parent="Monsters" instance=ExtResource( 5 )]

transform/local = Transform( -2.89268e-07, 0, 1.77551, 0, 1.77551, 0, -1.77551, 0, -2.89268e-07, 0, -6.16284, -6.0064 )

[node name="AreaHitMonster1" type="Area" parent="Monsters/monster1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 1.24544, 0, 0, 0, 1.24544, 0, 0, 0, 1.24544, 0, 3.58826, 0.203635 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Monsters/monster1/AreaHitMonster1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.24544, 0, 0, 0, 1.24544, 0, 0, 0, 1.24544, 0, 3.58826, 0.203635 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="AreaTalkMonster1" type="Area" parent="Monsters/monster1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 1.24544, 0, 0, 0, 1.24544, 0, 0, 0, 1.24544, 0, 3.58826, 0.203635 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Monsters/monster1/AreaTalkMonster1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.24544, 0, 0, 0, 1.24544, 0, 0, 0, 1.24544, 0, 3.58826, 0.203635 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="monster2" parent="Monsters" instance=ExtResource( 6 )]

editor/display_folded = true
transform/local = Transform( 1.01331, 0, 0, 0, 1.01331, 0, 0, 0, 1.01331, 39.8475, -6.27104, 1.18119 )

[node name="AreaTalk" type="Area" parent="Monsters/monster2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.30698, 0, 0, 0, 1.30698, 0, 0, 0, 1.30698, 0.200274, -4.20108, -0.666406 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionHit" type="CollisionShape" parent="Monsters/monster2/AreaTalk"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="AreaHit" type="Area" parent="Monsters/monster2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.30698, 0, 0, 0, 1.30698, 0, 0, 0, 1.30698, 0.135745, -4.20108, -0.38209 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionHit" type="CollisionShape" parent="Monsters/monster2/AreaHit"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 6.17735, 0, 0, 0, 6.17735, 0, 0, 0, 6.17735, -0.00517464, 4.74871, 0.413785 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="AreaDanger" type="Area" parent="Monsters/monster2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.30698, 0, 0, 0, 1.30698, 0, 0, 0, 1.30698, 0.135745, -5.91346, -0.38209 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Transform( 4.96535, 0, 0, 0, 4.96535, 0, 0, 0, 4.96535, -0.00517464, 6.05889, 0.413785 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionDanger" type="CollisionShape" parent="Monsters/monster2/AreaDanger"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 4.96535, 0, 0, 0, 4.96535, 0, 0, 0, 4.96535, -0.00517464, 6.05889, 0.413785 )
shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="CollisionShape 2" type="CollisionShape" parent="Monsters/monster2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 4.22109, 0, 0, 0, 4.22109, 0, 0, 0, 4.22109, -2.13031, -1.24433, -2.52888 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 1

[node name="Inventory" parent="." instance=ExtResource( 7 )]

[node name="Panel" type="Patch9Frame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 421.0
margin/right = 991.0
margin/bottom = 584.0
texture = ExtResource( 8 )
patch_margin/left = 20
patch_margin/top = 4
patch_margin/right = 20
patch_margin/bottom = 4

[node name="TIE" type="ReferenceFrame" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 20.0
margin/right = 942.0
margin/bottom = 174.0
script/script = ExtResource( 9 )
__meta__ = {
"_editor_icon": ExtResource( 10 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = false
AUTO_SKIP_WORDS = false
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = true
FONT = ExtResource( 11 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="Canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="dialog" parent="Canvas" instance=ExtResource( 12 )]

editor/display_folded = true
margin/left = 31.0
margin/top = 412.0
margin/right = 30.0
margin/bottom = 40.0
texture = ExtResource( 8 )
patch_margin/left = 20
patch_margin/right = 20
language = "res://dialog.lan"
font = SubResource( 9 )
font_size = 20

[node name="animation" type="AnimationPlayer" parent="Canvas/dialog/nextLine"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="text_display" parent="Canvas/dialog"]

percent_visible = 1.0

[node name="nextLine" type="TextureFrame" parent="Canvas/dialog"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 14.0
margin/right = 2.0
margin/bottom = -2.0
texture = ExtResource( 14 )
stretch_mode = 0

[node name="Timer" type="Timer" parent="Canvas/dialog"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[node name="face" type="AnimatedSprite" parent="Canvas/dialog"]

visibility/visible = false
transform/pos = Vector2( 3, 13 )
frames = ExtResource( 15 )
animation = "default"
frame = 2
centered = false

[node name="anim" type="AnimationPlayer" parent="Canvas/dialog"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blackScreen = SubResource( 11 )
"anims/blackScreen off" = SubResource( 12 )
anims/default = SubResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="Canvas/dialog"]

config/polyphony = 20
config/samples = SubResource( 14 )
default/volume_db = -18.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="text_display" type="RichTextLabel" parent="Canvas/dialog"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 216, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 8.0
margin/right = 16.0
margin/bottom = 8.0
custom_fonts/normal_font = SubResource( 15 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = true
bbcode/bbcode = "ABRAKADABRA"
visible_characters = -1
percent_visible = 1.0

[connection signal="body_enter" from="Areas/AreaQuadro" to="." method="_on_AreaQuadro_body_enter"]

[connection signal="body_exit" from="Areas/AreaQuadro" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Areas/AreaPorta1" to="." method="_on_AreaPorta1_body_enter"]

[connection signal="body_enter" from="Areas/AreaPorta2" to="." method="_on_AreaPorta2_body_enter"]

[connection signal="body_enter" from="Monsters/monster1/AreaHitMonster1" to="." method="_on_AreaHitMonster1_body_enter"]

[connection signal="body_exit" from="Monsters/monster1/AreaHitMonster1" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Monsters/monster1/AreaTalkMonster1" to="." method="_on_AreaTalkMonster1_body_enter"]

[connection signal="body_exit" from="Monsters/monster1/AreaTalkMonster1" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Monsters/monster2/AreaTalk" to="." method="_on_AreaTalkMonster2_body_enter"]

[connection signal="body_exit" from="Monsters/monster2/AreaTalk" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Monsters/monster2/AreaHit" to="." method="_on_AreaHitMonster2_body_enter"]

[connection signal="body_exit" from="Monsters/monster2/AreaHit" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Monsters/monster2/AreaDanger" to="." method="_on_AreaDanger_body_enter"]

[connection signal="body_exit" from="Monsters/monster2/AreaDanger" to="." method="_on_Area_body_exit"]

[connection signal="buff_end" from="Panel/TIE" to="." method="_on_TIE_buff_end"]

[connection signal="dialog_control" from="Canvas/dialog" to="." method="_on_dialog_dialog_control"]

[connection signal="finished" from="Canvas/dialog" to="." method="_on_dialog_finished"]


[editable path="Inventory"]
[editable path="Canvas/dialog"]
